<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Pure Data</string>
	<string name="kill_name">Stop Pure Data</string>
	<string name="left_label">Sine wave in left channel</string>
	<string name="right_label">Sine wave in right channel</string>
	<string name="mic_label">Patch mic to both channels</string>
	
	<string name="default_msg">Enter message to Pure Data</string><string name="pref_button_text">Preferences</string>

<string name="pref_title">Pure Data Preferences</string>
<string name="pref_sum">Pure Data Preferences</string>
<string name="pref_key_srate">SAMPLE_RATE</string>
<string name="pref_title_srate">Sample rate</string>
<string name="pref_sum_srate">Sample rate for Pure Data</string>

<string name="pref_key_inchannels">INPUT_CHANNELS</string>
<string name="pref_title_inchannels">Input channels</string>
<string name="pref_sum_inchannels">Number of input channels</string>
<string name="pref_key_outchannels">OUTPUT_CHANNELS</string>
<string name="pref_title_outchannels">Output channels</string><string name="pref_sum_outchannels">Number of output channels</string>





<string name="pref_key_bufsize_millis">BUFSIZE_MILLIS</string>
<string name="pref_title_bufsize_millis">Buffer size (ms)</string>
<string name="pref_sum_bufsize_millis">Pure Data buffer size in milliseconds</string>
<string name="about_title">About Pure Data</string>


<string name="about_msg">Pure Data is a real-time graphical programming environment for audio, video, and graphical processing, originally developed by Miller Puckette and company at IRCAM.  Android port by Peter Brinkmann, Peter Kirn, Hans-Christoph Steiner, and others.</string>
</resources>
